# nested_grid_plotter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
docs/: Makefile  make.bat
docs/source/: conf.py
docs/source/_static/: nested-grid-plotter.css
docs/source/tutorials/: basics.nblink  utils.nblink
docs/sources/: conf.py  installation.rst
docs/sources/tutorials/: animated_plotters.nblink  make_your_own_plotters.nblink
examples/: myte_st_align_axes.py
github/workflows/: github-actions.yml
nested_grid_plotter/: __about__.py  __init__.py  animated_plotter.py  base_plotter.py  imshow.py  utils.py
tests/: __init__.py  test_animated_plotter.py  test_base_plotter.py  test_imshow.py  test_utils.py
tutorials/: basics.ipynb  make_your_own_plotters.ipynb  utils.ipynb
