[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nested_grid_plotter"
dynamic = ["version"]
authors = [{ name = "Antoine Collet", email = "antoinecollet5@gmail.com" }]
readme = "README.rst"
description = "NestedGridPlotter is based on matplotlib and intends to simplify the plotting of nestedgrid by providing a objected oriented class."
keywords = [
    "nested_grid_plotter",
    "matplotlib",
    "plotter",
    "nested grid",
    "animation",
]
license = { text = "MIT license" }
dependencies = [
    "setuptools>=61.1.1",
    "wheel",
    "numpy",
    "matplotlib>=3.5.1",
    "packaging; python_version < '3.8'",
    "typing_extensions",
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://pypi.org/project/nested_grid_plotter/"
Documentation = "https://nested_grid_plotter.readthedocs.io/en/latest/"
Repository = "https://github.com/antoinecollet5/nested_grid_plotter"
Issues = "https://github.com/antoinecollet5/nested_grid_plotter/issues"
Changelog = "https://github.com/antoinecollet5/nested_grid_plotter/blob/master/CHANGELOG.rst"

[tool.setuptools]
py-modules = []
packages = ["nested_grid_plotter"]

[tool.setuptools.dynamic]
version = { attr = "nested_grid_plotter.__about__.__version__" }

[project.optional-dependencies]
all = ['nested_grid_plotter[docs, tests, lint, install]']
docs = [
    "sphinx<9",
    "nbsphinx",
    "nbsphinx-link>=1.3.1",
    "jupyter_sphinx>=0.3.2",
    "sphinx-jsonschema>=1.15",
    "pygments>=2.11.1",
    "pydata-sphinx-theme",
    "sphinxcontrib-bibtex",
]
tests = [
    "twine==1.14.0",
    "pytest",
    "pytest-runner",
    "pytest-cov",
    "pytest-cookies",
    "coverage",
    "nbmake",
]
lint = ["pre-commit", "codespell>=2.1.0", "ruff", "ty ; python_version > '3.7'"]
install = ["pip", "wheel"]

[tool.ruff]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
]
src = ["src", "tests", "docs"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "I"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.pylint.LOGGING]
# Format style used to check logging format string. `old` means using %
# formatting, `new` is for `{}` formatting,and `fstr` is for f-strings.
logging-format-style = "fstr"

[tool.pytest]
addopts = "tests/ --doctest-modules --cov=./mpu --cov-append --cov-report html:tests/reports/coverage-html --cov-report xml:tests/reports/coverage.xml --pep8 --ignore=docs/"
doctest_encoding = "utf-8"
