[metadata]
name = nested_grid_plotter
version = attr: nested_grid_plotter.__version__
author = attr: nested_grid_plotter.__author__
author_email = antoinecollet5@gmail.com
description = NestedGridPlotter is based on matplotlib and intends to simplify the plotting of nestedgrid by providing a objected oriented class.
long_description = file: README.rst, CHANGELOG.rst, LICENSE
url = https://github.com/antoinecollet5/nested_grid_plotter
keywords = nested_grid_plotter, matplotlib, plotter, nested grid
license = MIT license
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.7, <4
install_requires =
    importlib_metadata
    numpy
zip_safe = False
include_package_data = True

[bdist_wheel]
universal = 1

[aliases]
test =
    pytest
    coverage[options.package_data]

[flake8]
exclude = .git,__pycache__,build,dist,docs
ignore =
    # whitespace before ':'
    E203,
    # line break before binary operator
    W503,
    # line length too long
    E501,
    # do not assign a lambda expression, use a def
    E731,
    # ambiguous variable name
    E741,
    # Double quotes found but single quotes preferred
    Q000,
    # Black would make changes
    BLK100,

[codespell]
skip = *.pyc,*.gif,*.png,*.jpg,*.ply,*.ipynb
ignore-words-list = lod,byteorder,flem,parm,doubleclick,revered,inout,collet
quiet-level = 3

[tool.isort]
profile = "black"

[pylint.LOGGING]
# Format style used to check logging format string. `old` means using %
# formatting, `new` is for `{}` formatting,and `fstr` is for f-strings.
logging-format-style=fstr
